# adrift

./: .dockerignore  .gitignore  .semgrep.yml  Dockerfile.download  Makefile  README.md  compose.download.yaml  conftest.py  fix_tests.py  jscpd.json  mypy.ini  pyproject.toml  pyright_out.json  pyright_out2.json  pyrightconfig.json  requirements.txt  test_script.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
adrift/: app_common.py  config.py
adrift/adapters/: __init__.py  cache_retry.py
adrift/application/: __init__.py  context.py  download.py  events.py  merge.py
adrift/catalog/: collection.py  merge.py  merge_trace.py
adrift/cli/: __init__.py  cleanup.py  download.py  merge.py  root.py  schema.py
adrift/domain/: __init__.py  pipeline.py
adrift/files/: audio.py  s3.py  s3_cache.py  s3_listing.py  s3_types.py  s3_upload.py  s3_utils.py
adrift/models/: __init__.py  alignment_batch.py  metadata.py  output.py  podcast_config.py  podcasts.schema.json  ports.py  stage_result.py  ytdlp.py
adrift/ports/: alignment.py  cache.py  episode_source.py
adrift/services/: __init__.py  app_common.py  context.py  download.py  download_cache.py  download_client.py  download_enrich.py  download_process.py  download_rss.py  download_upload.py  merge.py  merge_service.py  schema_service.py
adrift/utils/: alignment_pairs.py  crypto.py  image.py  profiler.py  progress.py  regex.py  run_ui.py  terminal.py  text.py  title_normalization.py
adrift/web/: rss.py  sponsorblock.py
adrift/youtube/: auth.py  downloader.py  metadata.py  ytdlp.py
config/: podcasts.toml  settings.toml  youtube.toml
docs/: ALIGNMENT_MISTAKES.md  ARCHITECTURE_PLAYBOOK.md  COMPLEXITY.md  CONTRIBUTING.md  DESIGN.md  PLAN.md  PLAYBOOK.md  PLAYBOOK.md.orig  PORT_ADAPTER_ROADMAP.md  SPECS.md  TODO  VSCODE_SETUP.md  todo.md
rules/: jscpd.json  jscpd.tests.json
rules/.semgrep/: main.yml  scaffold.yml
rules/semgrep/: dependencies.yml  scaffold.yml
runbook/: __init__.py  audit_alignment.py  build_diagram.py  check_complexity.py  check_dead_code.py  check_s3.py  download.py  merge.py  migrate_configs.py  run_tests.py  secrets.py  validate_configs.py
runbook/analysis/: __init__.py  analyze_schedule.py  build_diagram.py  build_hotspots.py
runbook/database/: convert_common.py  convert_to_opus.py  convert_to_webp.py  download_podcasts_as_opus.py
runbook/download/: __init__.py  __main__.py
runbook/merge/: __init__.py  __main__.py
runbook/podcasts/: download_podcasts.py  update_podcasts.py
runbook/quality/: __init__.py  _compile_check.py  check_complexity.py  check_dead_code.py  check_import_boundaries.py  check_static.py  run_tests.py  validate_configs.py
runbook/secrets/: __init__.py  __main__.py
rust/adrift_rust_alignment/: Cargo.toml
rust_ext/adrift_alignment/: Cargo.toml
scripts/: check_s3.py
src/: __init__.py  app_common.py  app_runner.py  catalog.py  config.py  settings.py
src/adapters/: __init__.py  alignment.py  cache_retry.py  docker_secrets.py  env_secrets.py  episode_source_rss.py  episode_source_youtube.py  mermaid.py  report.py
src/application/: context.py  download.py  merge.py
src/catalog/: __init__.py  alignment.py  collection.py  merge.py  merge_trace.py
src/domain/: errors.py  pipeline.py
src/files/: audio.py  images.py  s3.py  s3_client.py  s3_listing.py  s3_metadata.py  s3_types.py  s3_upload.py  s3_utils.py
src/models/: __init__.py  metadata.py  output.py  pipeline.py  podcast_config.py  sponsorblock.py  ytdlp.py
src/orchestration/: __init__.py  download_cache.py  download_client.py  download_enrich.py  download_orchestration.py  download_process.py  download_rss.py  download_service.py  download_upload.py  download_worker.py  merge_service.py  models.py  secret_service.py
src/ports/: __init__.py  alignment.py  cache.py  episode_source.py  mermaid.py  report.py  secrets.py  storage.py
src/utils/: cache.py  crypto.py  image_dedupe_index.py  image_phash.py  media.py  progress.py  regex.py  run_ui.py  schedule.py  terminal.py  text.py  title_normalization.py
src/web/: rss.py  sponsorblock.py
src/youtube/: auth.py  downloader.py  error_utils.py  metadata.py  ytdlp.py
tests/: __init__.py  env.py  pyrightconfig.json  test_lint.py
tests/adapters/: test_episode_source_adapters.py
tests/audio/: __init__.py  audio_test_helpers.py  test_audio_matching.py  test_convert_to_opus_quality.py  test_cut_segments.py  test_extract_features.py  test_extract_segment.py  test_silence_detection.py
tests/benchmarks/: _runner.py  baselines.json  conftest.py  test_alignment_perf.py  test_normalization_perf.py
tests/catalog/: test_align_episodes.py  test_alignment_csv.py  test_catalog.py  test_financial_audit_weighted_cases.py  test_morbid_benchmark.py  test_morbid_quality_gate.py  test_morbid_weighted_cases.py  test_score.py  test_swindled_weighted_cases.py
tests/cli/: test_root_cli.py
tests/files/: test_audio_progress.py  test_cache.py  test_s3_service.py
tests/misc/: __init__.py  (+23 more)
tools/: match_diag.py  prod_match_trace.py
typings/: browser_cookie3.pyi  diskcache.pyi  dotenv.pyi  feedparser.pyi  portion.pyi  pydantic.pyi  pytest.pyi  pytubefix.pyi
(+187 files in other folders)
