[tool.poetry]
name = "adrift"
version = "0.1.0"
description = "Podcast aggregation and ad-removal platform"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
attrs = "*"
pydantic = "*"
boto3 = "*"
feedparser = "*"
Pillow = "*"
python-dotenv = "*"
requests = "*"
tqdm = "*"
yt-dlp = "*"
rapidfuzz = "*"
unidecode = "*"
cachetools = "*"
diskcache = "*"
yarl = "*"
pyright = "^1.1.408"

[tool.poetry.group.dev.dependencies]
# Type stubs
mypy-boto3-s3 = "*"
boto3-stubs = { extras = ["s3"], version = "*" }
types-tqdm = "*"
types-cachetools = "*"
types-yt-dlp = "*"
types-python-dateutil = "*"
# Linting & formatting
ruff = "*"
mypy = "*"
# Testing
pytest = "*"
# Quality tools
lizard = "*"
vulture = "*"
grimp = "*"
networkx = "*"
types-pillow = "^10.2.0.20240822"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke real ffmpeg/ffprobe processes (run with -m slow)",
]

[tool.mypy]
mypy_path = "typings"
python_version = "3.11"
ignore_missing_imports = false
disallow_untyped_calls = false
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "runbook", "tests", "typings"]
exclude = ["runbook/analysis"]
