[tool.poetry]
name = "adrift"
version = "0.1.0"
description = "Podcast source aggregation and reference alignment"
authors = []
package-mode = true
packages = [{ include = "src" }, { include = "runbook" }]

[tool.poetry.scripts]
adrift-merge = "runbook.merge:main"
adrift-download = "runbook.download:main"
adrift-secrets = "runbook.secrets:main"
adrift-build-diagram = "runbook.analysis.build_diagram:main"
adrift-build-hotspots = "runbook.analysis.build_hotspots:main"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "*"
pydantic = "*"
feedparser = "*"
python-dotenv = "*"
requests = "*"
tqdm = "*"
yt-dlp = "*"
rapidfuzz = "*"
numpy = "*"
unidecode = "*"
cachetools = "*"
diskcache = "*"
yarl = "*"
python-dateutil = "*"
boto3 = "*"
rich = "*"
typer = "*"
pyright = "^1.1.408"

[tool.poetry.group.dev.dependencies]
# Type stubs
types-tqdm = "*"
types-cachetools = "*"
types-yt-dlp = "*"
types-python-dateutil = "*"
boto3-stubs = { extras = ["s3"], version = "*" }
# Linting & formatting
ruff = "*"
mypy = "*"
# Testing
pytest = "*"
# Quality tools
pyright = "*"
lizard = "*"
vulture = "*"
grimp = "*"
networkx = "*"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: marks slower integration-oriented tests (run with -m slow)"]

[tool.mypy]
mypy_path = "typings"
python_version = "3.11"
ignore_missing_imports = false
disallow_untyped_calls = false
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "runbook", "tests", "typings"]
exclude = ["runbook/analysis"]
