[tool.poetry]
name = "adrift"
version = "0.1.0"
description = "Podcast source aggregation and reference alignment"
authors = []
package-mode = true
packages = [{ include = "src" }, { include = "runbook" }]

[tool.poetry.scripts]
adrift-merge = "runbook.merge:main"
adrift-download = "runbook.download:main"
adrift-secrets = "runbook.secrets:main"
adrift-build-diagram = "runbook.analysis.build_diagram:main"
adrift-build-hotspots = "runbook.analysis.build_hotspots:main"

[tool.poetry.dependencies]
python = ">=3.12"
attrs = "~=26.1.0"
pydantic = "~=2.12.5"
feedparser = "~=6.0.12"
python-dotenv = "~=1.2.2"
requests = "~=2.33.1"
tqdm = "~=4.67.3"
yt-dlp = "~=2026.3.17"
rapidfuzz = "~=3.14.3"
numpy = "~=2.4.4"
unidecode = "~=1.4.0"
cachetools = "~=7.0.5"
diskcache = "~=5.6.3"
yarl = "~=1.23.0"
python-dateutil = "~=2.9.0.post0"
boto3 = "~=1.42.91"
rich = "~=15.0.0"
typer = "^0.24.1"

[tool.poetry.group.dev.dependencies]
# Type stubs
types-tqdm = "~=4.67.3.20260402"
types-cachetools = "~=6.2.0.20260317"
types-yt-dlp = "~=2026.3.17.20260402"
types-python-dateutil = "~=2.9.0.20260402"
boto3-stubs = { extras = ["s3"], version = "~=1.42.91" }
# Linting & formatting
ruff = "~=0.15.9"
mypy = "~=1.20.0"
# Testing
pytest = "~=9.0.2"
# Quality tools
ty = "^0.0.32"
lizard = "~=1.21.3"
vulture = "~=2.16"
grimp = "~=3.14"
networkx = "~=3.6"
semgrep = "<1.160.0"
setuptools = ">=75.0"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: marks slower integration-oriented tests (run with -m slow)"]

[tool.mypy]
mypy_path = "typings"
python_version = "3.11"
ignore_missing_imports = false
disallow_untyped_calls = false
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"
extra-paths = []
root = ["."]

[tool.ty.src]
include = ["src"]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.terminal]
error-on-warning = false
output-format = "full"

[tool.ty.rules]
# Enforce strict typing by default.
all = "error"
